# Q1_2026_Accel_Bijoy_Kumar_Roy

./: .gitignore  README.md
escrow-litesvm/: .gitignore
escrow-litesvm/programs/anchor-escrow/src/: errors.rs  lib.rs
escrow-litesvm/programs/anchor-escrow/src/instructions/: make.rs  take.rs
escrow-litesvm/programs/anchor-escrow/src/tests/: mod.rs
gpt-oracle-tuktuk/: Anchor.toml  package-lock.json  package.json  solana_gpt_oracle.ts
gpt-oracle-tuktuk/programs/gpt-oracle-tuktuk/: Cargo.toml
gpt-oracle-tuktuk/programs/gpt-oracle-tuktuk/src/: lib.rs
gpt-oracle-tuktuk/programs/gpt-oracle-tuktuk/src/instructions/: callback_from_agent.rs  close_agent.rs  initialize.rs  mod.rs  run_agent.rs  schedule.rs
gpt-oracle-tuktuk/tests/: gpt-oracle-tuktuk.ts
magicblock-er-example/: Anchor.toml  package-lock.json  package.json
magicblock-er-example-tuktuk/: Anchor.toml  config.toml  package-lock.json  package.json
magicblock-er-example-tuktuk/cron/: cron.ts
magicblock-er-example-tuktuk/programs/er-state-account/: Cargo.toml
magicblock-er-example-tuktuk/programs/er-state-account/src/: lib.rs
magicblock-er-example-tuktuk/programs/er-state-account/src/instructions/: generate_random_data.rs  mod.rs  schedule.rs
magicblock-er-example-tuktuk/tests/: er-state-account.ts
magicblock-er-example/programs/er-state-account/: Cargo.toml
magicblock-er-example/programs/er-state-account/src/: lib.rs
magicblock-er-example/programs/er-state-account/src/instructions/: generate_random_data.rs  mod.rs  vrf_callback.rs
magicblock-er-example/tests/: er-state-account.ts
transfer_enabled_vault/: Anchor.toml
transfer_enabled_vault/programs/transfer_enabled_vault/: Cargo.toml
transfer_enabled_vault/programs/transfer_enabled_vault/src/: errors.rs  lib.rs
transfer_enabled_vault/programs/transfer_enabled_vault/src/instructions/: add_to_whitelist.rs  create_mint.rs  deposit.rs  init_extra_account_meta.rs  init_vault.rs  mint_token.rs  mod.rs  remove_from_whitelist.rs  transfer_hook.rs  withdraw.rs
transfer_enabled_vault/programs/transfer_enabled_vault/src/state/: vault.rs
transfer_enabled_vault/programs/transfer_enabled_vault/tests/: test.rs
whitelist-transfer-hook/: Anchor.toml  package-lock.json  package.json
whitelist-transfer-hook/programs/whitelist-transfer-hook/: Cargo.toml
whitelist-transfer-hook/programs/whitelist-transfer-hook/src/: errors.rs  lib.rs
whitelist-transfer-hook/programs/whitelist-transfer-hook/src/instructions/: mod.rs  (+5 more)
whitelist-transfer-hook/tests/: whitelist-transfer-hook.ts
(+1 files in other folders)
