[package]
name = "transfer_enabled_vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_enabled_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[patch.crates-io]
num-bigint = { version = "0.2.6", features = ["i128"] }

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-discriminator = "0.5.1"
spl-tlv-account-resolution = "0.11.1"
spl-transfer-hook-interface = "2.1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dev-dependencies]
litesvm = "0.9.1"
litesvm-token = "0.9.1"
solana-account = "3.4"
solana-address = "2.1"
solana-hash = "4.1"
solana-instruction = "3.1"
solana-keypair = "3.1"
solana-message = "3.0"
solana-native-token = "3.0"
solana-sdk-ids = "3.1"
solana-signer = "3.0"
solana-system-interface = "3.0"
solana-transaction = "3.0"
